fix: adjust styling and layout spacing index page

--- a/app/routes/_index/components/Experiences/styles.module.css
+++ b/app/routes/_index/components/Experiences/styles.module.css
@@ -120,7 +120,6 @@
 
 	.title {
 		font-size: 3.5rem;
-		margin-bottom: 3rem;
 	}
 
 	.content {
